cfn-templates/dh-openvpn-cfn-vpc.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  A VPC declaration comprising a public and private subnet, spaning two 
  availability zones. The following auxillary components are included here:

  Public & Private Route Tables.
  An Internet Gatway.
  A NAT Gateway.

  Note that the NAT Gateway is only active during Stage2 of the build process.

  CIDR Allocations:

  Public Subnet Total      : 10.0.128.0/18
  Availability Zone A CIDR : 10.0.128.0/20
  Availability Zone B CIDR : 10.0.144.0/20

  Private Subnet Total     : 10.0.0.0/17
  Availability Zone A CIDR : 10.0.0.0/19
  Availability Zone B CIDR : 10.0.32.0/19

# ------------------------------------------


# ==========================================
Metadata: {}
# Metadata:


# ==========================================
# Parameters {}
Parameters:

  # ------------------------------------------
  # --- The Project Name
  ProjectName:
    Description: "Name of this Openvpn project"
    ConstraintDescription: "Specify name of the project"
    Type: String
    Default: "dh-openvpn"
    MinLength: 3
    MaxLength: 63
    AllowedPattern:
      (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))

  # ------------------------------------------
  # --- Stack Build Stage Indicator
  BuildStep:
    Description: "Specify the Stage of the Build"
    Type: String
    Default: "Stage1"


# ==========================================
# Conditions: {}
Conditions:
  # CreateResourcesStage1: !Equals [ !Ref BuildStep, "Stage1"]
  CreateResourcesStage2: !Equals [!Ref BuildStep, "Stage2"]
  # CreateResourcesStage3: !Equals [!Ref BuildStep, "Stage3"]


# ==========================================
Resources:

  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  #         TOP LEVEL CIDR DEFINITION
  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


  # ------------------------------------------
  # --- VPC Definition
  VPC:
    Type: "AWS::EC2::VPC"
    # .............................
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: "Name"
          Value:
            !Sub "${ProjectName}-VPC"


  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  #         SUBNET DEFINITIONS
  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  # ------------------------------------------
  # --- AZ-A Public Subnet
  PublicSubnetA:
    Type: "AWS::EC2::Subnet"
    # .............................
    Properties:
      CidrBlock: "10.0.128.0/20"
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      AvailabilityZone:
        'Fn::Select':
          - '0'
          - 'Fn::GetAZs':
              Ref: 'AWS::Region'
      Tags:
        - Key: "Name"
          Value:
            !Sub "${ProjectName}-PubSubnetA"

  # ------------------------------------------
  # --- AZ-B Public Subnet
  PublicSubnetB:
    Type: "AWS::EC2::Subnet"
    # .............................
    Properties:
      CidrBlock: "10.0.144.0/20"
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      AvailabilityZone:
        'Fn::Select':
          - '1'
          - 'Fn::GetAZs':
              Ref: 'AWS::Region'
      Tags:
        - Key: "Name"
          Value:
            !Sub "${ProjectName}-PubSubnetB"

  # ------------------------------------------
  # --- AZ1 Private Subnet
  PrivateSubnetA:
    Type: "AWS::EC2::Subnet"
    # .............................
    Properties:
      CidrBlock: "10.0.0.0/19"
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
      AvailabilityZone:
        'Fn::Select':
          - '0'
          - 'Fn::GetAZs':
              Ref: 'AWS::Region'
      Tags:
        - Key: "Name"
          Value:
            !Sub "${ProjectName}-PrivSubnetA"

  # ------------------------------------------
  # --- AZ-B Private Subnet
  PrivateSubnetB:
    Type: "AWS::EC2::Subnet"
    # .............................
    Properties:
      CidrBlock: "10.0.32.0/19"
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
      AvailabilityZone:
        'Fn::Select':
          - '1'
          - 'Fn::GetAZs':
              Ref: 'AWS::Region'
      Tags:
        - Key: "Name"
          Value:
            !Sub "${ProjectName}-PrivSubnetB"


  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  #         ROUTE TABLE DEFINITIONS
  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  # ------------------------------------------
  # --- Public Route Table
  RouteTablePublic:
    Type: "AWS::EC2::RouteTable"
    # .............................
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value:
            !Sub "${ProjectName}-PubRoute"

  # ------------------------------------------
  RouteTablePublicAssociationA:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    # .............................
    Properties:
      RouteTableId: !Ref RouteTablePublic
      SubnetId: !Ref PublicSubnetA

  # ------------------------------------------
  RouteTablePublicAssociationB:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    # .............................
    Properties:
      RouteTableId: !Ref RouteTablePublic
      SubnetId: !Ref PublicSubnetB

  # ------------------------------------------
  RouteTablePublicRoute0:
    Type: "AWS::EC2::Route"
    # .............................
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      RouteTableId: !Ref RouteTablePublic
      GatewayId: !Ref Igw

  # ------------------------------------------
  # --- Private A Route Table
  RouteTablePrivateA:
    Type: "AWS::EC2::RouteTable"
    # .............................
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value:
            !Sub "${ProjectName}-PrivRouteA"

  # ------------------------------------------
  RouteTablePrivateAAssociation1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    # .............................
    Properties:
      RouteTableId: !Ref RouteTablePrivateA
      SubnetId: !Ref PrivateSubnetA

  # ------------------------------------------
  RouteTablePrivateARoute0:
    Type: "AWS::EC2::Route"
    Condition: CreateResourcesStage2
    # .............................
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      RouteTableId: !Ref RouteTablePrivateA
      NatGatewayId: !Ref NatGw1

  # ------------------------------------------
  # --- Private B Route Table
  RouteTablePrivateB:
    Type: "AWS::EC2::RouteTable"
    # .............................
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value:
            !Sub "${ProjectName}-PrivRouteB"
  # ------------------------------------------
  RouteTablePrivateBAssociation1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    # .............................
    Properties:
      RouteTableId: !Ref RouteTablePrivateB
      SubnetId: !Ref PrivateSubnetB

  # ------------------------------------------
  RouteTablePrivateBRoute0:
    Type: "AWS::EC2::Route"
    Condition: CreateResourcesStage2
    # .............................
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      RouteTableId: !Ref RouteTablePrivateB
      NatGatewayId: !Ref NatGw1


  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  #         GATEWAY DEFINITIONS
  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  # ------------------------------------------
  # --- Internet Gateway
  Igw:
    Type: "AWS::EC2::InternetGateway"
    # .............................
    Properties: {}

  # ------------------------------------------
  # --- Internet Gateway Attachment
  IGWAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    # .............................
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref Igw

  # ------------------------------------------
  # --- NAT Gateway IP address
  NatGw1ElasticIP:
    Type: "AWS::EC2::EIP"
    Condition: CreateResourcesStage2
    # .............................
    Properties:
      Domain: vpc

  # ------------------------------------------
  # --- NAT Gateway
  NatGw1:
    Type: "AWS::EC2::NatGateway"
    Condition: CreateResourcesStage2
    # .............................
    Properties:
      SubnetId: !Ref PublicSubnetA
      AllocationId:
        'Fn::GetAtt':
          - NatGw1ElasticIP
          - AllocationId


# ==========================================
# Outputs: {}
Outputs:

  # ------------------------------------------
  # ---Top Level VPCID Export
  VPCID:
    Description: "VPC ID"
    Value: !Ref VPC

  # ------------------------------------------
  # ---Public Subnet AZ-A Export
  PublicSubnetIdA:
    Description: "Public Subnet ID AZ-A"
    Value: !Ref PublicSubnetA

  # ------------------------------------------
  # ---Public Subnet AZ-B Export
  PublicSubnetIdB:
    Description: "Public Subnet ID AZ-B"
    Value: !Ref PublicSubnetB

  # ------------------------------------------
  # ---Private Subnet AZ-A Export
  PrivateSubnetIdA:
    Description: "Private Subnet ID AZ-A"
    Value: !Ref PrivateSubnetA

  # ------------------------------------------
  # ---Private Subnet AZ-B Export
  PrivateSubnetIdB:
    Description: "Private Subnet ID AZ-B"
    Value: !Ref PrivateSubnetB
