cfn-templates/dh-openvpn-cfn_vpc-sg.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  NetSec Defense-In-Depth Restrictive Security Group Definitions.
  A Nested Stack that comprises: 
  Private & Public Security Group Rule Definitions.
  Inputs include:
  VPC Top Level VPC ID.
  VPC Top Level CIDR Definition.
  Outputs include:
  Private Security Group Resource ID.
  Public Security Group Resource ID.
#-------------------------------------------


Metadata: {}


Parameters:
#===========================================

#--- Parameter Types
#-------------------------------------------
  VPCID:
    Description: VPC to create the SG into.
    Type: AWS::EC2::VPC::Id
#-------------------------------------------


Conditions: {}


Resources:
#===========================================


#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# SECURITY GROUP DEFINITIONS
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


#--- Public Subnet Security Group
#-------------------------------------------
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Public Security Group
      VpcId:
        Ref: VPCID
      SecurityGroupIngress:
        - Description: SSH External
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - Description: OpenVPN TCP
          IpProtocol: tcp
          FromPort: 1194
          ToPort: 1194
          CidrIp: 0.0.0.0/0
        - Description: OpenVPN UDP
          IpProtocol: udp
          FromPort: 1194
          ToPort: 1194
          CidrIp: 0.0.0.0/0
        - Description: Ping External
          IpProtocol: icmp
          FromPort: 8
          ToPort: -1
          CidrIp: 0.0.0.0/0
        - Description: Ping Local
          IpProtocol: icmp
          FromPort: 8
          ToPort: -1
          CidrIp: "10.0.0.0/16"
############################################
        - Description: httpd access for nlb health check
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
############################################

#--- Private Subnet Security Group
#-------------------------------------------
  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Private Security Group
      VpcId:
        Ref: VPCID
#-------------------------------------------
  PrivateInboundRuleSSH:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        !GetAtt PrivateSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId:
        !GetAtt PublicSecurityGroup.GroupId
#-------------------------------------------
  PrivateInboundRuleICMP:
      Type: AWS::EC2::SecurityGroupIngress
      Properties:
        GroupId:
          !GetAtt PrivateSecurityGroup.GroupId
        IpProtocol: icmp
        FromPort: 8
        ToPort: -1
        SourceSecurityGroupId:
          !GetAtt PublicSecurityGroup.GroupId
#-------------------------------------------



#Outputs: {}
Outputs:
#===========================================


#---Public Security Group Export
#-------------------------------------------
  PublicSgResourceId:
    Description: Public SG Resource ID.
    Value: !Ref PublicSecurityGroup

#---Private Security Group Export
#-------------------------------------------
  PrivateSgResourceId:
    Description: Private SG Resource ID.
    Value: !Ref PrivateSecurityGroup
